--- a/app/res/layout/screen_connect_phone_verify.xml
+++ b/app/res/layout/screen_connect_phone_verify.xml
@@ -38,16 +38,33 @@
             android:textColor="@color/connect_dark_blue_color"
             android:textSize="16sp" />
 
-        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-            android:id="@+id/connect_phone_verify_label"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:textColor="@color/connect_secondary_text"
-            android:textSize="16sp"
-            tools:text="+91 7748962888" />
+            android:orientation="horizontal">
+
+            <org.commcare.views.connect.connecttextview.ConnectRegularTextView
+                android:id="@+id/connect_phone_verify_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/connect_secondary_text"
+                android:textSize="16sp"
+                tools:text="+91 7748962888" />
+
+            <org.commcare.views.connect.connecttextview.ConnectBoldTextView
+                android:id="@+id/connect_phone_verify_change"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:gravity="start"
+                android:text="@string/connect_verify_phone_change"
+                android:textColor="@color/connect_blue_color"
+                android:textSize="16sp"
+                android:visibility="visible" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/otp_layout"
@@ -73,6 +90,20 @@
 
             </LinearLayout>
 
+            <org.commcare.views.connect.CustomOtpView
+                android:id="@+id/customOtpView"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                app:otpViewDigitCount="6"
+                android:layout_marginStart="16dp"
+                app:otpViewTextColor="@color/connect_blue_color"
+                app:otpViewBorderColor="@color/connect_blue_color"
+                app:otpViewBorderRadius="4dp"
+                app:otpViewBorderWidth="0.5dp"
+                app:otpViewErrorTextColor="@color/connect_red"
+                app:otpViewErrorBorderColor="@color/connect_red"
+                app:otpViewTextSize="6sp" />
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/connect_phone_verify_code"
                 android:layout_width="match_parent"
@@ -82,6 +113,7 @@
                 android:hint="OTP"
                 android:imeOptions="actionNext"
                 android:inputType="numberDecimal"
+                android:visibility="gone"
                 android:paddingStart="16dp"
                 android:textColorHint="@color/connect_grey"
                 tools:ignore="RtlSymmetry" />
@@ -96,17 +128,6 @@
             android:gravity="start"
             android:textColor="@color/red"
             android:textSize="14sp"
-            android:visibility="gone" />
-
-        <org.commcare.views.connect.connecttextview.ConnectRegularTextView
-            android:id="@+id/connect_phone_verify_change"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/content_min_margin"
-            android:gravity="start"
-            android:text="@string/connect_verify_phone_change"
-            android:textColor="@color/blue"
-            android:textSize="16sp"
             android:visibility="gone" />
 
         <org.commcare.views.connect.connecttextview.ConnectMediumTextView
