-ui changes for rounded button

--- a/app/res/layout/activity_drawing_boundary.xml
+++ b/app/res/layout/activity_drawing_boundary.xml
@@ -44,32 +44,36 @@
         android:layout_width="match_parent"
         android:orientation="horizontal">
 
-        <Button
-            style="@style/MapButtonGreen"
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
+            android:backgroundTint="@color/green_500"
             android:id="@+id/start_tracking_button"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:visibility="gone"
             android:layout_width="0dp" />
 
-        <Button
-            style="@style/MapButtonRed"
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
             android:id="@+id/stop_tracking_button"
+            android:backgroundTint="@color/red_500"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:visibility="gone" />
 
-        <Button
-            style="@style/MapButtonOrange"
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
+            android:backgroundTint="@color/orange_500"
             android:id="@+id/redo_tracking_button"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:visibility="gone" />
 
-        <Button
-            style="@style/MapButtonGreen"
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
+            android:backgroundTint="@color/green_500"
             android:id="@+id/ok_tracking_button"
             android:layout_height="wrap_content"
             android:layout_weight="1"
