--- a/app/res/layout/blank_missing_multimedia_layout.xml
+++ b/app/res/layout/blank_missing_multimedia_layout.xml
@@ -22,7 +22,8 @@
         android:paddingStart="20px">
     </ImageView>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/skip_verification_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -31,7 +32,8 @@
         android:layout_above="@+id/screen_multimedia_retry"
         android:visibility="gone" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@id/screen_multimedia_retry"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
