--- a/app/res/layout/execute_recovery_measures.xml
+++ b/app/res/layout/execute_recovery_measures.xml
@@ -53,7 +53,8 @@
             android:visibility="gone"
             tools:text="2 out of 5 done"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
             android:id="@+id/retry_button"
             android:layout_below="@id/status_tv"
             android:layout_centerHorizontal="true"
@@ -63,7 +64,8 @@
             android:text="@string/recovery_measure_retry"
             android:visibility="gone"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
             android:id="@+id/reinstall_button"
             android:layout_below="@id/retry_button"
             android:layout_centerHorizontal="true"
@@ -73,7 +75,8 @@
             android:text="@string/recovery_measure_reinstall"
             android:visibility="gone"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
             android:id="@+id/select_ccz_button"
             android:layout_below="@id/reinstall_button"
             android:layout_centerHorizontal="true"
