--- a/app/res/layout/fragment_setup_enter_url.xml
+++ b/app/res/layout/fragment_setup_enter_url.xml
@@ -65,7 +65,8 @@
                     </EditText>
                 </LinearLayout>
 
-                <Button
+                <com.google.android.material.button.MaterialButton
+                    style="@style/CustomButtonStyle"
                     android:id="@+id/start_install"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
