--- a/app/res/layout/progress_dialog_cancel_button.xml
+++ b/app/res/layout/progress_dialog_cancel_button.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.button.MaterialButton
+    style="@style/CustomButtonStyle"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="@dimen/min_button_height"
@@ -9,9 +11,7 @@
     android:layout_marginEnd="@dimen/standard_spacer_large"
     android:layout_marginRight="@dimen/standard_spacer_large"
     android:layout_marginBottom="@dimen/standard_spacer"
-    android:background="@android:color/transparent"
     android:padding="@dimen/standard_spacer"
-    style="@style/CommCare.Button.Default"
     android:text="STOP"
     android:textSize="@dimen/font_size_dp_medium"
     android:visibility="gone"
