--- a/app/res/layout-land/activity_crash_warning.xml
+++ b/app/res/layout-land/activity_crash_warning.xml
@@ -93,12 +93,11 @@
         </LinearLayout>
     </ScrollView>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/RestartCommCare"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/content_min_margin"
-        android:background="@color/cc_brand_color"
-        android:textColor="@color/cc_neutral_bg"/>
+        android:layout_margin="@dimen/content_min_margin"/>
 </RelativeLayout>
