--- a/app/res/layout/activity_target_mismatch_error.xml
+++ b/app/res/layout/activity_target_mismatch_error.xml
@@ -38,8 +38,10 @@
             tools:text="In order to install CommCare LTS, Please click on install button below. Then try installing your app again."/>
     </LinearLayout>
 
-    <Button
-        style="@style/PromptedUpdateButtonUpdateLater"
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/standard_spacer_large"
         android:layout_below="@+id/error_info_container"
         android:id="@+id/install_app_button"
