--- a/app/res/layout/app_manager.xml
+++ b/app/res/layout/app_manager.xml
@@ -36,7 +36,8 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/install_app_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
