--- a/app/res/layout/blue_outlined_button.xml
+++ b/app/res/layout/blue_outlined_button.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/CustomButtonStyleOutline"
+    app:strokeColor="@color/primary_button_background"
     android:id="@+id/blue_outlined_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="right"
     android:textColor="@color/blue"
     android:visibility="gone"
-    style="@style/CommCare.Button.Default"
-    android:background="@drawable/blue_outlined_view"
     android:padding="10dp"
-    tools:viewBindingIgnore="true"/>
+    tools:viewBindingIgnore="true" />
