--- a/app/res/layout/component_entity_detail_item.xml
+++ b/app/res/layout/component_entity_detail_item.xml
@@ -41,7 +41,8 @@
             android:visibility="visible"
             android:layout_marginEnd="8dp" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
             android:id="@+id/detail_value_phone"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -105,7 +106,8 @@
                 android:drawablePadding="@dimen/content_min_margin"
                 android:text="Callout"/>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/CustomButtonStyle"
                 android:id="@+id/callout_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -146,7 +148,8 @@
             android:paddingStart="11dp"
             android:paddingEnd="4dp">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/CustomButtonStyle"
                 android:id="@+id/detail_address_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
