--- a/app/res/layout/custom_alert_dialog.xml
+++ b/app/res/layout/custom_alert_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -71,50 +71,48 @@
             android:layout_weight="2"
             android:layout_marginBottom="@dimen/standard_spacer">
 
-            <Button xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/positive_button"
+            <com.google.android.material.button.MaterialButton
+                style="@style/CustomButtonStyleOutline"
+                app:strokeColor="@color/primary_button_background"
+                android:id="@+id/positive_button"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/min_button_height"
                     android:padding="@dimen/standard_spacer"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="@dimen/standard_spacer"
-                    android:background="@android:color/transparent"
                     android:textSize="@dimen/font_size_dp_medium"
-                    android:textColor="@color/dialog_button_color"
                     android:visibility="gone"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="@dimen/standard_spacer">
-            </Button>
+                android:layout_marginEnd="@dimen/standard_spacer"/>
 
-            <Button xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/neutral_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/min_button_height"
-                    android:padding="@dimen/standard_spacer"
-                    android:layout_toLeftOf="@id/positive_button"
-                    android:background="@android:color/transparent"
-                    android:textSize="@dimen/font_size_dp_medium"
-                    android:textColor="@color/dialog_button_color"
-                    android:visibility="gone"
-                android:layout_toStartOf="@id/positive_button">
-            </Button>
+            <com.google.android.material.button.MaterialButton
+                style="@style/CustomButtonStyleOutline"
+                app:strokeColor="@color/primary_button_background"
+                android:id="@+id/neutral_button"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/min_button_height"
+                android:padding="@dimen/standard_spacer"
+                android:layout_toLeftOf="@id/positive_button"
+                android:textSize="@dimen/font_size_dp_medium"
+                android:text="@string/access_error"
+                android:visibility="gone"
+                android:layout_toStartOf="@id/positive_button"/>
 
-            <Button xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/negative_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/min_button_height"
-                    android:padding="@dimen/standard_spacer"
-                    android:layout_toLeftOf="@id/neutral_button"
-                    android:layout_marginRight="@dimen/standard_spacer"
-                    android:layout_marginLeft="@dimen/standard_spacer"
-                    android:background="@android:color/transparent"
-                    android:textSize="@dimen/font_size_dp_medium"
-                    android:textColor="@color/dialog_button_color"
-                    android:visibility="gone"
+            <com.google.android.material.button.MaterialButton
+                style="@style/CustomButtonStyleOutline"
+                android:id="@+id/negative_button"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/min_button_height"
+                android:padding="@dimen/standard_spacer"
+                app:strokeColor="@color/primary_button_background"
+                android:layout_toLeftOf="@id/neutral_button"
+                android:layout_marginRight="@dimen/standard_spacer"
+                android:layout_marginLeft="@dimen/standard_spacer"
+                android:textSize="@dimen/font_size_dp_medium"
+                android:visibility="gone"
                 android:layout_marginStart="@dimen/standard_spacer"
                 android:layout_marginEnd="@dimen/standard_spacer"
-                android:layout_toStartOf="@id/neutral_button">
-            </Button>
+                android:layout_toStartOf="@id/neutral_button"/>
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
