--- a/app/res/layout/geo_progress.xml
+++ b/app/res/layout/geo_progress.xml
@@ -51,7 +51,8 @@
         android:orientation="horizontal"
         android:layout_weight="1">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
             android:id="@+id/geoOK"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -59,7 +60,8 @@
             android:text="Record Location"
             android:layout_margin="@dimen/standard_spacer"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/CustomButtonStyle"
             android:id="@+id/geoCancel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
