--- a/app/res/layout/layout_note_msg.xml
+++ b/app/res/layout/layout_note_msg.xml
@@ -42,7 +42,8 @@
         android:text="What to do about it"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/layout_note_msg_action_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
