--- a/app/res/layout/missing_multimedia_layout.xml
+++ b/app/res/layout/missing_multimedia_layout.xml
@@ -21,7 +21,8 @@
         android:layout_marginEnd="20px">
     </ImageView>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/skip_verification_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -30,7 +31,8 @@
         android:layout_above="@+id/screen_multimedia_retry"
         android:visibility="gone"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@id/screen_multimedia_retry"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
