--- a/app/res/layout/multiple_apps_limit_view.xml
+++ b/app/res/layout/multiple_apps_limit_view.xml
@@ -14,7 +14,8 @@
         android:layout_centerInParent="true"
         android:gravity="center"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/back_to_manager_button"
