--- a/app/res/layout/pin_screen_buttons.xml
+++ b/app/res/layout/pin_screen_buttons.xml
@@ -8,14 +8,16 @@
     android:weightSum="2"
     tools:viewBindingIgnore="true">
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/min_button_height"
         android:id="@+id/pin_cancel_button"
         android:textSize="@dimen/font_size_dp_medium"
         android:layout_weight="1"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/min_button_height"
         android:id="@+id/pin_confirm_button"
