--- a/app/res/layout/privilege_claiming_view.xml
+++ b/app/res/layout/privilege_claiming_view.xml
@@ -50,7 +50,8 @@
         android:layout_marginStart="@dimen/standard_spacer_double"
         android:layout_marginEnd="@dimen/standard_spacer_double" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/claim_button"
