--- a/app/res/layout/recording_fragment.xml
+++ b/app/res/layout/recording_fragment.xml
@@ -68,9 +68,9 @@
         android:layout_height="wrap_content"
         android:visibility="invisible" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/action_button"
-        style="@style/Commcare.Button.Primary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="4dp"
@@ -82,6 +82,6 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         tools:text="Finish"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
 </LinearLayout>
