--- a/app/res/layout/screen_form_dump.xml
+++ b/app/res/layout/screen_form_dump.xml
@@ -43,20 +43,21 @@
                 android:layout_centerHorizontal="true"
                 android:layout_margin="10dp"
                 android:gravity="center"
-                android:layout_below="@+id/screen_multimedia_inflater_filefetch"
                 android:text="From here you can dump your forms to an SD card or submit the forms on your SD card"/>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/CustomButtonStyle"
                 android:id="@+id/screen_bulk_form_dump"
-                style="@style/ButtonBottom"
                 android:layout_width="match_parent"
+                android:layout_margin="10dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/screen_bulk_form_prompt"
                 android:text="Dump Forms"/>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
+                style="@style/CustomButtonStyle"
                 android:id="@+id/screen_bulk_form_submit"
-                style="@style/ButtonBottom"
+                android:layout_margin="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/screen_bulk_form_dump"
