--- a/app/res/layout/screen_recovery.xml
+++ b/app/res/layout/screen_recovery.xml
@@ -38,7 +38,8 @@
         android:visibility="gone"
         tools:text="Waiting"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/retry_button"
         android:layout_below="@id/recovery_status"
         android:layout_centerHorizontal="true"
@@ -48,7 +49,8 @@
         android:text="@string/recovery_retry"
         android:visibility="gone"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/app_manager_button"
         android:layout_below="@id/retry_button"
         android:layout_centerHorizontal="true"
