--- a/app/res/layout/single_app_view.xml
+++ b/app/res/layout/single_app_view.xml
@@ -36,7 +36,8 @@
         style="@style/TextAppearance.AppCompat.Body2"
         android:visibility="visible"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/uninstall_button"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/standard_spacer"
@@ -44,7 +45,8 @@
         android:onClick="rebootAlertDialog"
         android:text="@string/uninstall_app" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/archive_button"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/standard_spacer"
@@ -52,7 +54,8 @@
         android:onClick="toggleArchiveClicked"
         android:text="@string/archive_app" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:id="@+id/update_button"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/standard_spacer"
@@ -60,7 +63,8 @@
         android:onClick="updateClicked"
         android:text="@string/update_app" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
+        style="@style/CustomButtonStyle"
         android:clickable="true"
         android:id="@+id/verify_button"
         android:layout_height="wrap_content"
