--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -305,4 +305,32 @@
         <item name="android:windowBackground">"@color/black"</item>
         <item name="android:navigationBarColor">@color/black</item>
     </style>
+
+        <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
+            <item name="background">@color/button_primary_color</item>
+            <item name="android:textColor">@color/white</item>
+            <item name="android:textSize">16sp</item>
+            <item name="android:gravity">center</item>
+            <item name="android:padding">12dp</item>
+            <item name="height">40dp</item>
+            <item name="cornerRadius">22dp</item>
+            <item name="iconPadding">8dp</item>
+            <item name="android:textAllCaps">false</item>
+            <item name="android:textStyle">bold</item>
+        </style>
+    
+    <style name="CustomButtonStyleOutline" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="shapeAppearanceOverlay">@style/MyShapeAppearance</item>
+    </style>
+    <style name="MyShapeAppearance" parent="">
+        <item name="cornerFamilyTopLeft">rounded</item>
+        <item name="cornerFamilyBottomLeft">rounded</item>
+        <item name="cornerFamilyTopRight">rounded</item>
+        <item name="cornerFamilyBottomRight">rounded</item>
+        <item name="cornerSize">22dp</item>
+        <item name="strokeColor">@color/button_primary_color</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="textColor">@color/button_primary_color</item>
+    </style>
+
 </resources>
