- pr request changes

--- a/app/res/layout/entity_detail.xml
+++ b/app/res/layout/entity_detail.xml
@@ -9,17 +9,14 @@
     android:orientation="vertical"
     tools:viewBindingIgnore="true">
 
-    <com.google.android.material.button.MaterialButton
-        style="@style/CustomButtonStyle"
+    <Button
+        style="@style/ScreenPinnedButton"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:backgroundTint="@color/cc_attention_positive_bg"
         android:textColor="@color/cc_attention_positive_text"
         android:id="@+id/entity_select_button"
-        android:drawableRight="@drawable/icon_chevron_right_attnpos"
-        android:drawableTint="@color/cc_attention_positive_text"
         android:text="Continue"
-        android:textSize="@dimen/text_large"
         android:layout_below="@+id/universal_frame_tile"/>
 
     <FrameLayout
