--- a/app/res/layout/recording_fragment.xml
+++ b/app/res/layout/recording_fragment.xml
@@ -69,7 +69,6 @@
         android:visibility="invisible" />
 
     <com.google.android.material.button.MaterialButton
-        style="@style/CustomButtonStyle"
         android:id="@+id/action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -82,6 +81,6 @@
         android:layout_marginTop="15dp"
         android:gravity="center"
         tools:text="Finish"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
 </LinearLayout>
