--- a/app/res/layout/square_card.xml
+++ b/app/res/layout/square_card.xml
@@ -23,14 +23,15 @@
             android:id="@+id/card"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="170dp">
 
             <org.commcare.views.SquareImageView
                 android:id="@+id/card_image"
-                android:layout_width="wrap_content"
-                android:padding="16dp"
-                android:layout_height="wrap_content"/>
+                android:layout_width="130dp"
+                android:layout_centerHorizontal="true"
+                android:paddingVertical="24dp"
+                android:layout_height="150dp"/>
 
             <org.commcare.views.ResizingTextView
                 android:id="@+id/card_text"
@@ -42,8 +43,8 @@
                 android:paddingBottom="@dimen/standard_spacer"
                 android:paddingLeft="@dimen/standard_spacer"
                 android:paddingRight="@dimen/standard_spacer"
-                android:textSize="@dimen/font_size_large"
-                app:text_size_small="@dimen/font_size_medium"
+                android:textSize="@dimen/font_size_xlarger"
+                app:text_size_small="@dimen/font_size_xlargest"
                 android:paddingStart="@dimen/standard_spacer"
                 android:paddingEnd="@dimen/standard_spacer" />
         </RelativeLayout>
