--- a/app/res/layout-land/home_screen.xml
+++ b/app/res/layout-land/home_screen.xml
@@ -11,7 +11,7 @@
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
     android:layout_alignParentTop="true"
-    android:background="@color/cc_core_bg"
+    android:background="@color/white"
     android:paddingLeft="@dimen/content_start"
     android:paddingRight="@dimen/content_start"
     android:paddingStart="@dimen/content_start"
@@ -81,7 +81,7 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cvDailyLimitView"
+                android:id="@+id/cvConnectMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/viewJobCard"
@@ -102,27 +102,25 @@
                     android:paddingEnd="15dp">
 
                     <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-                        android:id="@+id/tvOverLimitDescription"
+                        android:id="@+id/tvConnectMessage"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/connect_job_tile_daily_limit_description"
                         android:layout_marginEnd="10dp"
                         android:textColor="@color/connect_warning_color"
                         android:textSize="14sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/btnOverLimit"
-                        app:layout_constraintEnd_toStartOf="@+id/btnOverLimit"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <org.commcare.views.connect.RoundedButton
-                        android:id="@+id/btnOverLimit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:text="@string/connect_job_tile_daily_limit"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:roundButtonTextSize="4sp" />
+<!--                    <org.commcare.views.connect.RoundedButton-->
+<!--                        android:id="@+id/btnOverLimit"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="30dp"-->
+<!--                        android:text="@string/connect_job_tile_daily_limit"-->
+<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintTop_toTopOf="parent"-->
+<!--                        app:roundButtonTextSize="4sp" />-->
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -140,7 +138,7 @@
                 android:id="@+id/home_gridview_buttons"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/cvDailyLimitView"
+                android:layout_below="@+id/cvConnectMessage"
                 android:nestedScrollingEnabled="false"
                 android:scrollbars="vertical" />
         </RelativeLayout>
