--- a/app/res/layout/home_screen.xml
+++ b/app/res/layout/home_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cc_core_bg"
+    android:background="@color/white"
     android:orientation="vertical"
     android:padding="4dp"
     tools:viewBindingIgnore="true">
@@ -72,7 +72,7 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/cvDailyLimitView"
+                android:id="@+id/cvConnectMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/viewJobCard"
@@ -93,27 +93,25 @@
                     android:paddingEnd="15dp">
 
                     <org.commcare.views.connect.connecttextview.ConnectMediumTextView
-                        android:id="@+id/tvOverLimitDescription"
+                        android:id="@+id/tvConnectMessage"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/connect_job_tile_daily_limit_description"
                         android:layout_marginEnd="10dp"
                         android:textColor="@color/connect_warning_color"
                         android:textSize="14sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/btnOverLimit"
-                        app:layout_constraintEnd_toStartOf="@+id/btnOverLimit"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <org.commcare.views.connect.RoundedButton
-                        android:id="@+id/btnOverLimit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:text="@string/connect_job_tile_daily_limit"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:roundButtonTextSize="4sp" />
+<!--                    <org.commcare.views.connect.RoundedButton-->
+<!--                        android:id="@+id/btnOverLimit"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="30dp"-->
+<!--                        android:text="@string/connect_job_tile_daily_limit"-->
+<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        app:layout_constraintTop_toTopOf="parent"-->
+<!--                        app:roundButtonTextSize="4sp" />-->
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
@@ -131,7 +129,7 @@
                 android:id="@+id/home_gridview_buttons"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/cvDailyLimitView"
+                android:layout_below="@+id/cvConnectMessage"
                 android:nestedScrollingEnabled="false"
                 android:scrollbars="vertical" />
         </RelativeLayout>
