--- a/app/res/layout/activity_hquser_invite.xml
+++ b/app/res/layout/activity_hquser_invite.xml
@@ -62,6 +62,22 @@
         app:roundButtonTextSize="6sp"
         tools:text="@string/connect_hq_invitation_denied" />
 
+    <org.commcare.views.connect.RoundedButton
+        android:id="@+id/btn_go_to_recovery"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="15dp"
+        android:text="@string/connect_hq_invitation_go_to_recovery"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_denied_invitation"
+        app:roundButtonBackgroundColor="@color/connect_blue_color"
+        app:roundButtonTextColor="@color/white"
+        app:roundButtonTextSize="6sp"
+        tools:text="@string/connect_hq_invitation_go_to_recovery" />
+
     <org.commcare.views.connect.connecttextview.ConnectMediumTextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
