--- a/app/res/layout/screen_connect_phone_verify.xml
+++ b/app/res/layout/screen_connect_phone_verify.xml
@@ -42,14 +42,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_gravity="end"
             android:layout_marginStart="16dp"
+            android:gravity="center"
             android:layout_marginEnd="16dp"
             android:orientation="horizontal">
 
             <org.commcare.views.connect.connecttextview.ConnectRegularTextView
                 android:id="@+id/connect_phone_verify_label"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:textColor="@color/connect_secondary_text"
                 android:textSize="16sp"
                 tools:text="+91 7748962888" />
@@ -59,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:gravity="start"
+                android:gravity="end"
                 android:text="@string/connect_verify_phone_change"
                 android:textColor="@color/connect_blue_color"
                 android:textSize="16sp"
@@ -157,6 +160,27 @@
                 android:layout_gravity="end"
                 android:gravity="center"
                 android:text="@string/connect_deactivate_account"
+                app:roundButtonBackgroundColor="@color/white"
+                app:roundButtonBorderRadius="@dimen/dp48"
+                app:roundButtonIconLeftAlign="false"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                app:roundButtonIconTintColor="@color/white"
+                app:roundButtonTextColor="@color/connect_blue_color"
+                app:roundButtonBorderWidth="0.5dp"
+                android:visibility="gone"
+                app:roundButtonBorderVisible="true"
+                app:roundButtonBorderColor="@color/connect_blue_color"
+                app:roundButtonTextSize="6.5sp" />
+
+            <org.commcare.views.connect.RoundedButton
+                android:id="@+id/connect_resend_button"
+                android:layout_width="150dp"
+                android:layout_height="45dp"
+                android:layout_gravity="end"
+                android:gravity="center"
+                android:visibility="gone"
+                android:text="Resend OTP"
                 app:roundButtonBackgroundColor="@color/white"
                 app:roundButtonBorderRadius="@dimen/dp48"
                 app:roundButtonIconLeftAlign="false"
