--- a/app/res/layout/single_dialog_choice_view.xml
+++ b/app/res/layout/single_dialog_choice_view.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.button.MaterialButton
+<Button
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/choice_dialog_panel"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/standard_spacer"
+    style="@style/CommCare.Button.Default"
+    android:background="@drawable/selector_button_press"
     android:drawablePadding="5dp"
     android:padding="12dp"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
