--- a/app/res/layout/screen_form_entry.xml
+++ b/app/res/layout/screen_form_entry.xml
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/nav_badge"
-        android:background="@color/cc_core_bg"
+        android:background="@color/cc_brand_color"
         android:minHeight="@dimen/new_progressbar_minheight"
         android:paddingLeft="@dimen/content_start"
         android:paddingRight="@dimen/content_start"
@@ -70,40 +70,40 @@
             android:id="@+id/nav_btn_prev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:background="@drawable/selector_button_press"
             android:minHeight="@dimen/new_progressbar_button_minheight"
             android:minWidth="@dimen/new_progressbar_button_minwidth"
             android:paddingLeft="@dimen/content_start"
             android:paddingRight="@dimen/new_progressbar_button_padding"
-            app:srcCompat="@drawable/icon_chevron_left_brand"
+            app:srcCompat="@drawable/icon_chevron_left_white"
             android:paddingStart="@dimen/content_start"
             android:layout_alignParentStart="true"
             android:paddingEnd="@dimen/new_progressbar_button_padding" />
 
         <ProgressBar
-            android:id="@+id/nav_prog_bar"
             style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/nav_btn_prev"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="@dimen/content_start"
-            android:layout_marginRight="@dimen/content_start"
-            android:layout_toLeftOf="@+id/nav_btn_next"
-            android:layout_toRightOf="@id/nav_btn_prev"
+            android:id="@+id/nav_prog_bar"
             android:indeterminate="false"
             android:indeterminateOnly="false"
+            android:layout_centerVertical="true"
+            android:layout_height="32dp"
+            android:layout_marginEnd="@dimen/content_start"
+            android:layout_marginLeft="@dimen/content_start"
+            android:layout_marginRight="@dimen/content_start"
+            android:layout_marginStart="@dimen/content_start"
+            android:layout_toEndOf="@id/nav_btn_prev"
+            android:layout_toLeftOf="@+id/nav_btn_next"
+            android:layout_toRightOf="@id/nav_btn_prev"
+            android:layout_toStartOf="@+id/nav_btn_next"
+
+            android:layout_width="wrap_content"
             android:max="100"
             android:paddingBottom="@dimen/content_start"
             android:paddingTop="@dimen/content_start"
             android:progress="0"
-            android:progressDrawable="@drawable/progressbar_modern"
-            android:layout_marginStart="@dimen/content_start"
-            android:layout_marginEnd="@dimen/content_start"
-            android:layout_toStartOf="@+id/nav_btn_next"
-            android:layout_toEndOf="@id/nav_btn_prev" />
+            android:progressDrawable="@drawable/progressbar_modern" />
 
         <ImageButton
             android:rotationY="@integer/locale_mirror_flip"
@@ -111,12 +111,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:background="@drawable/selector_button_press"
             android:minHeight="@dimen/new_progressbar_button_minheight"
             android:minWidth="@dimen/new_progressbar_button_minwidth"
             android:paddingLeft="@dimen/new_progressbar_button_padding"
             android:paddingRight="@dimen/content_start"
-            app:srcCompat="@drawable/icon_chevron_right_brand"
+            app:srcCompat="@drawable/icon_chevron_right_white"
             android:paddingEnd="@dimen/content_start"
             android:paddingStart="@dimen/new_progressbar_button_padding"
             android:layout_alignParentEnd="true" />
