Solved OTP verification API issues
Solved OTP verification API issues

--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -171,6 +171,14 @@
             android:name="phone"
             app:argType="string"
             app:nullable="true" />
+        <argument
+            android:name="username"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="password"
+            app:argType="string"
+            app:nullable="true" />
         <action
             android:id="@+id/action_connectPaymentSetupPhoneVerificationFragment_to_connect_jobs_list_fragment"
             app:destination="@id/connect_jobs_list_fragment"
