--- a/app/res/navigation/nav_graph_connect.xml
+++ b/app/res/navigation/nav_graph_connect.xml
@@ -172,6 +172,10 @@
             app:argType="string"
             app:nullable="true" />
         <argument
+            android:name="paymentProfileName"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
             android:name="username"
             app:argType="string"
             app:nullable="true" />
